--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -5245,10 +5245,9 @@ msgstr ""
 "Rydym yn anfon yr allwedd i’r cyfeiriad sydd gennym ar ein cofnodion. <a href="
 "\"%link%\" class=\"govuk-link\">Rhowch wybod inni os ydych wedi symud tŷ.</a>"
 
-# Welsh says ‘we’ve found this lpa’
 #: src/Viewer/templates/viewer/check-code-found.html.twig:22
 msgid "We’ve found %firstname% %surname%'s LPA"
-msgstr "Rydym wedi dod o hyd i’r LPA hwn"
+msgstr "Rydym wedi dod o hyd i LPA %firstname% %surname%"
 
 #: src/Actor/templates/actor/partials/lpas-registered-after.html.twig:17
 msgid ""
