--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-21T10:50:24+00:00\n"
+"POT-Creation-Date: 2022-04-22T06:39:40+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -6692,3 +6692,9 @@ msgid ""
 msgstr ""
 "Os yw eich enw ar 2 neu fwy o atwrneiaethau arhosol, mae gennych fysell "
 "actifadu wahanol ar gyfer pob un."
+
+#. Add LPA
+#: src/Actor/templates/actor/form-error-messages.html.twig:47
+msgctxt "error"
+msgid "The LPA reference number provided is not correct"
+msgstr "Nid yw’r cyfeirnod LPA a ddarparwyd yn gywir"
