--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-06-07T15:30:12+00:00\n"
+"POT-Creation-Date: 2022-06-16T16:32:22+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2120,50 +2120,50 @@ msgstr ""
 "neu’n rhoddwr os ydych o dan 18 oed"
 
 #. Create viewer code
-#: src/Actor/templates/actor/form-error-messages.html.twig:70
+#: src/Actor/templates/actor/form-error-messages.html.twig:72
 msgctxt "error"
 msgid "Enter an organisation name"
 msgstr "Nodwch enw sefydliad"
 
 #. Change password
-#: src/Actor/templates/actor/form-error-messages.html.twig:73
+#: src/Actor/templates/actor/form-error-messages.html.twig:75
 msgctxt "error"
 msgid "Enter your current password"
 msgstr "Teipiwch eich cyfrinair cyfredol"
 
 #. Change password
-#: src/Actor/templates/actor/form-error-messages.html.twig:74
+#: src/Actor/templates/actor/form-error-messages.html.twig:76
 msgctxt "error"
 msgid "Current password is incorrect"
 msgstr "Mae’r cyfrinair cyfredol yn anghywir"
 
 #. Change password
-#: src/Actor/templates/actor/form-error-messages.html.twig:75
+#: src/Actor/templates/actor/form-error-messages.html.twig:77
 msgctxt "error"
 msgid "Enter your new password"
 msgstr "Teipiwch eich cyfrinair newydd"
 
 #. Change password, password reset
-#: src/Actor/templates/actor/form-error-messages.html.twig:76
+#: src/Actor/templates/actor/form-error-messages.html.twig:78
 msgctxt "error"
 msgid "New password and confirm new password do not match"
 msgstr ""
 "Nid yw eich cyfrinair newydd a’r cyfrinair i gadarnhau eich cyfrif yn cyfateb"
 
 #. Change password
-#: src/Actor/templates/actor/form-error-messages.html.twig:77
+#: src/Actor/templates/actor/form-error-messages.html.twig:79
 msgctxt "error"
 msgid "Enter your password again to confirm it"
 msgstr "Teipiwch eich cyfrinair eto i’w gadarnhau"
 
 #. Password reset
-#: src/Actor/templates/actor/form-error-messages.html.twig:80
+#: src/Actor/templates/actor/form-error-messages.html.twig:82
 msgctxt "error"
 msgid "Confirm your email address"
 msgstr "Cadarnhau eich cyfeiriad e-bost"
 
 #. Password reset
-#: src/Actor/templates/actor/form-error-messages.html.twig:81
+#: src/Actor/templates/actor/form-error-messages.html.twig:83
 msgctxt "error"
 msgid "The emails did not match"
 msgstr "Nid oedd y cyfeiriadau e-bost yn cyfateb"
@@ -2443,7 +2443,7 @@ msgstr ""
 #: src/Actor/templates/actor/contact-details.html.twig:43
 #: src/Actor/templates/actor/home-page.html.twig:57
 #: src/Actor/templates/actor/lpa-create-viewercode.html.twig:65
-#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:49
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:74
 #: src/Actor/templates/actor/request-activation-key/actor-role.html.twig:48
 #: src/Actor/templates/actor/request-activation-key/address-on-paper.html.twig:34
 #: src/Actor/templates/actor/request-activation-key/attorney-details.html.twig:54
@@ -6979,15 +6979,15 @@ msgstr "Nodwch eich tref neu ddinas"
 msgid "What is your address?"
 msgstr "Beth yw eich cyfeiriad?"
 
-#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:28
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:30
 msgid "Address line 1"
 msgstr ""
 
-#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:33
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:35
 msgid "Address line 2 (optional)"
 msgstr ""
 
-#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:38
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:40
 msgid "Town or city"
 msgstr "Tref neu ddinas"
 
@@ -7078,3 +7078,54 @@ msgstr ""
 "wedi rhoi’r cyfeirnod ar gyfer atwrneiaeth arhosol wahanol. Bydd y llythyr "
 "gyda’r allwedd cadarnhau cyfrif hefyd yn cynnwys cyfeirnod yr atwrneiaeth "
 "arhosol cyfatebol."
+
+#. Add Older LPA
+#: src/Actor/templates/actor/form-error-messages.html.twig:68
+msgctxt "error"
+msgid "Select whether this is the same address as your address on the paper LPA"
+msgstr ""
+"Dewiswch ai dyma’r un cyfeiriad â’r cyfeiriad sydd ar yr atwrneiaeth arhosol "
+"bapur"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:20
+msgid "We need some more details"
+msgstr "Mae angen rhagor o fanylion arnom"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:21
+msgid ""
+"We need a few extra details to make sure we have the right LPA for your "
+"activation key request."
+msgstr ""
+"Mae angen ychydig o fanylion ychwanegol arnom i wneud yn siŵr bod gennym yr "
+"atwrneiaeth arhosol gywir ar gyfer eich cais i gael allwedd cadarnhau cyfrif."
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:22
+msgid "What is your current address?"
+msgstr "Beth yw eich cyfeiriad ar hyn o bryd?"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:23
+msgid "Your activation key will be posted to this address."
+msgstr "Bydd eich allwedd cadarnhau cyfrif yn cael ei bostio i’r cyfeiriad hwn."
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:45
+msgid "County (optional)"
+msgstr "Sir (dewisol)"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:49
+msgid "Is this the same address as your address on the paper LPA?"
+msgstr ""
+"Ai dyma’r un cyfeiriad â’r cyfeiriad sydd ar yr atwrneiaeth arhosol bapur?"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:57
+msgid "Yes, it is the same as my address on the paper LPA"
+msgstr "Ydy, mae’r un fath â fy nghyfeiriad ar yr atwrneiaeth arhosol bapur"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:61
+msgid "No, it is different than my address on the paper LPA"
+msgstr "Na, mae’n wahanol i’m cyfeiriad ar yr atwrneiaeth arhosol bapur"
+
+#: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:65
+msgid "I am not sure if it's the same address on the paper LPA"
+msgstr ""
+"Dydw i ddim yn siŵr a yw’r un fath â fy nghyfeiriad ar yr atwrneiaeth arhosol "
+"bapur"
