--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-07-22T12:41:08+00:00\n"
+"POT-Creation-Date: 2022-07-22T15:17:32+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2429,7 +2429,7 @@ msgstr ""
 #: src/Actor/templates/actor/confirm-lpa-for-key-request.html.twig:75
 #: src/Actor/templates/actor/contact-details.html.twig:43
 #: src/Actor/templates/actor/home-page.html.twig:57
-#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:70
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:71
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:83
 #: src/Actor/templates/actor/request-activation-key/actor-role.html.twig:52
 #: src/Actor/templates/actor/request-activation-key/address-on-paper.html.twig:34
@@ -7190,3 +7190,24 @@ msgstr ""
 "fel prawf yn unig, ac efallai y byddir yn rhoi’r gorau i wneud hynny dros dro. "
 "Fodd bynnag, unwaith y byddwch wedi gofyn am allwedd cadarnhau cyfrif ar gyfer "
 "LPA, byddwch bob amser yn gallu defnyddio’r LPA ar y gwasanaeth hwn."
+
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:64
+msgid ""
+"This is a new service, check that the organisation will accept an online "
+"summary of the<abbr title=\"lasting power of attorney\">LPA</abbr> and how "
+"they want to receive the access code you make for them."
+msgstr ""
+"Gwasanaeth newydd yw hwn. Gwiriwch a fydd y sefydliad yn derbyn crynodeb ar-"
+"lein o’r <abbr title=\"atwrneiaethau arhosol\">LPA</abbr> a sut maen nhw "
+"eisiau cael y cod mynediad y byddwch yn ei greu iddynt."
+
+#: src/Actor/templates/actor/partials/new-use-service.html.twig:5
+#: src/Viewer/templates/viewer/new-view-service.html.twig:5
+msgid ""
+"Your <a class=\"govuk-link\" href=\"{link}\" target=\"_blank\">feedback<span "
+"class=\"govuk-visually-hidden\">(opens in new tab)</span></a> will help us to "
+"improve"
+msgstr ""
+"Bydd eich <a class=\\\"govuk-link\\\" href=\\\"{link}\\\" target=\\\"_blank\\"
+"\">adborth<span class=“govuk-visually-hidden”>(yn agor mewn tab newydd)</"
+"span></a> yn ein helpu wella"
